feat: adjust to readfile with right values